# info-dig

./: .gitignore  Dockerfile  LICENSE  LICENSE.txt  README.md  docker-compose.yml  nginx.conf
server/: Cargo.toml
server/migrations/2023-12-10-212653_add_index_to_content/: down.sql  up.sql
server/migrations/2023-12-10-221349_modify_statements_for_slug/: down.sql  up.sql
server/src/: main.rs  schema.rs  schema_backup.rs  utils.rs
server/src/handlers/: mod.rs  proposal.rs  statement.rs
server/src/models/: enums.rs  mod.rs  proposal.rs  statement.rs
web-client/: babel.config.js  package.json  vue.config.js
web-client/.well-known/acme-challenge/: 2wUwxAlLWeIC_2onH-GfvQgn9PGUxIevSIpyHf04dXc  MTs1F9H2yU8DT-BZR5517qZxOuRlg0DLnRgi2aMPSFg
web-client/src/: App.vue  main.ts
web-client/src/api-utils/: allApi.ts  proposalsApi.ts  statementsApi.ts
web-client/src/components/: GradientButton.vue  HelloWorld.vue
web-client/src/components/Proposals/: Slides.vue
web-client/src/components/Statements/: Card.vue  Cards.vue  CreateStatementButton.vue  CreateStatementModal.vue  EditStatementModal.vue  Links.vue
web-client/src/interfaces/: proposals.ts  statements.ts
web-client/src/router/: index.ts
web-client/src/stores/: modals.ts  proposals.ts  statements.ts
web-client/src/utils/: statementsHelpers.ts
web-client/src/views/: CampaignsView.vue  HomeView.vue  ProposalsView.vue  ResearchView.vue  StatementDetailView.vue  StatementsView.vue
