[package]
name = "info_dig"
version = "0.1.0"
authors = ["Elijah Ally <elijah.ally@solrblu.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-rt = "1.1.1"
actix-cors = "0.5.4"
dotenv = "0.15.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "chrono", "serde_json"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.9"
time = "0.3"
language-tags = "0.2"
strum = "0.20"
strum_macros = "0.20"